--- a/SportsSideKick/app/src/main/res/values-v21/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-v21/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="wall_top_spacer_height">75dp</dimen>
     <dimen name="header_image_title_margin_top">25dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="card_negative_padding">0dp</dimen>
 </resources>
