--- a/SportsSideKick/app/src/main/res/layout-large/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/wall_item_user_post.xml
@@ -28,7 +28,7 @@
             android:src="@drawable/news_holder_image"
             android:visibility="visible"/>
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/user_image"
             android:layout_width="@dimen/width_60"
             android:layout_height="@dimen/height_60"
@@ -36,9 +36,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_10"
-            android:src="?profileImageIcon"
-            app:civ_border_color="@color/colorPrimaryVeryLight"
-            app:civ_border_width="@dimen/width_2"/>
+            android:src="?profileImageIcon"/>
 
         <ImageView
             android:id="@+id/play_button"
