--- a/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
@@ -3,14 +3,13 @@
     android:layout_width="@dimen/width_60"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/chat_head_image_view"
         android:layout_width="@dimen/width_60"
         android:layout_height="@dimen/height_60"
         android:layout_alignParentTop="true"
         android:padding="@dimen/padding_8"
-        android:scaleType="centerCrop"
-        app:civ_border_width="@dimen/image_border_width_2"/>
+        android:scaleType="centerCrop"/>
     <ImageView
         android:id="@+id/notification_icon"
         android:layout_width="@dimen/width_15"
