--- a/SportsSideKick/app/src/main/res/layout/chat_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_item.xml
@@ -5,16 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="@dimen/margin_10">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/chat_head_image_view"
         android:layout_width="@dimen/width_60"
         android:layout_height="@dimen/height_60"
         android:layout_alignParentTop="true"
         android:padding="@dimen/padding_8"
-        android:scaleType="centerCrop"
-        app:civ_border_width="@dimen/image_border_width_2"/>
-
-
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/chat_name"
