--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -472,7 +472,7 @@
                 android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                 android:tint="#8501a352" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:id="@+id/sharedMessageAvatar"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
