--- a/SportsSideKick/app/src/main/res/layout/include_input_field.xml
+++ b/SportsSideKick/app/src/main/res/layout/include_input_field.xml
@@ -22,7 +22,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/authorImage"
             android:layout_width="@dimen/width_26"
             android:layout_height="@dimen/height_26"
