--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -7,15 +7,14 @@
     android:paddingTop="@dimen/margin_5"
     android:layout_marginEnd="@dimen/margin_15">
 
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <ImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="@dimen/message_item_circle_image_size"
         android:layout_height="@dimen/message_item_circle_image_size"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="@dimen/margin_8"
-        app:civ_border_color="@color/black"
-        app:civ_border_width="@dimen/space_0" />
+        android:layout_marginStart="@dimen/margin_8" />
 
     <RelativeLayout
         android:id="@+id/content_container"
