--- a/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_edit_profile.xml
@@ -200,7 +200,7 @@
                             android:layout_marginEnd="@dimen/margin_10"/>
                     </RelativeLayout>
 
-                    <de.hdodenhof.circleimageview.CircleImageView
+                    <ImageView
                         android:id="@+id/profile_image"
                         android:layout_width="@dimen/popup_friend_profil_profile_image_size"
                         android:layout_height="@dimen/popup_friend_profil_profile_image_size"
