--- a/SportsSideKick/app/src/main/res/layout/row_chat_expanded_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_chat_expanded_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/row_chat_expanded_item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
