--- a/SportsSideKick/app/src/main/res/layout/row_chat_search_expandable_parent.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_chat_search_expandable_parent.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/padding_16">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/row_join_chat_search_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
