--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -56,8 +56,7 @@
                 android:gravity="bottom"
                 android:orientation="horizontal">
 
-                <!--TODO: Show author image if this is a pinned item, not official news-->
-                <de.hdodenhof.circleimageview.CircleImageView
+                <ImageView
                     android:id="@+id/authorImage"
                     android:layout_width="@dimen/width_20"
                     android:layout_height="@dimen/height_20"
@@ -132,7 +131,7 @@
         android:visibility="gone"
         tools:visibility="visible">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/captionAvatar"
             android:layout_width="24dp"
             android:layout_height="24dp"
