--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -122,7 +122,7 @@
             android:background="@color/colorPrimaryVeryLight" />
     </LinearLayout>
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/top_buttons_container">
@@ -641,10 +641,11 @@
                 android:layout_below="@+id/holder_progress_bar"
                 android:background="#2f000000" />
 
-            <base.app.util.ui.NoScrollRecycler
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/profile_stats_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:nestedScrollingEnabled="false"
                 android:layout_below="@+id/holder_progress_bar"
                 android:layout_marginBottom="@dimen/margin_10"
                 android:layout_marginTop="@dimen/margin_10" />
@@ -711,5 +712,5 @@
                     android:visibility="gone" />
             </RelativeLayout>
         </RelativeLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 </android.support.percent.PercentRelativeLayout>
