--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -247,6 +247,7 @@
                     android:id="@+id/fragment_wall_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:nestedScrollingEnabled="false"
                     android:layout_below="@id/login_holder"
                     android:layout_marginTop="?wallRecyclerListPhoneTopMargin"
                     android:clipToPadding="false"
