--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -106,6 +106,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_toEndOf="@id/wall_team_left_image"
+                                tools:visibility="gone"
                                 android:padding="@dimen/padding_8"
                                 android:text="@string/vs"
                                 android:textColor="@color/white"
@@ -163,12 +164,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/wall_top_image_container"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginTop="-4dp"
-                    android:animateLayoutChanges="true"
                     android:background="@color/colorPrimary"
                     android:orientation="vertical"
-                    android:paddingBottom="8dp"
-                    android:paddingTop="@dimen/margin_16"
+                    android:paddingTop="4dp"
                     android:visibility="gone"
                     tools:visibility="visible">
 
@@ -178,11 +176,14 @@
                         style="@style/fontTitilliumWebLight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/padding_8"
+                        android:paddingTop="@dimen/padding_8"
+                        android:paddingLeft="16dp"
+                        android:paddingBottom="4dp"
+                        android:paddingRight="16dp"
                         android:text="@string/access_full"
                         android:textAlignment="center"
                         android:textColor="@color/white"
-                        android:textSize="22sp" />
+                        android:textSize="20sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -253,6 +254,7 @@
                     android:id="@+id/fragment_wall_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    tools:paddingLeft="16dp"
                     android:nestedScrollingEnabled="false"
                     android:layout_below="@id/login_holder"
                     android:layout_marginTop="?wallRecyclerListPhoneTopMargin"
