--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -315,4 +315,19 @@
         android:text="@string/forgot_your_password"
         android:textColor="?popupsCaptionColor" />
 
+    <FrameLayout
+        android:id="@+id/loadingOverlay"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#c2000000">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </FrameLayout>
+
 </RelativeLayout>
