--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -242,6 +242,8 @@
             android:id="@+id/drawer_container"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="false"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:background="@color/colorGraySemiLight">
