--- a/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/width_60"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="60dp">
+
     <ImageView
         android:id="@+id/chat_head_image_view"
-        android:layout_width="@dimen/width_60"
-        android:layout_height="@dimen/height_60"
-        android:layout_alignParentTop="true"
-        android:padding="@dimen/padding_8"
-        android:scaleType="centerCrop"/>
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="12dp"
+        android:layout_centerVertical="true"
+        android:background="@drawable/background_chat_head_selector"
+        android:padding="2dp"
+        tools:selected="true"
+        tools:src="@drawable/blank_profile_rounded" />
+
     <ImageView
         android:id="@+id/notification_icon"
         android:layout_width="@dimen/width_15"
         android:layout_height="@dimen/height_15"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:layout_margin="@dimen/margin_5"
         android:src="?chatNotificationIcon"
+        tools:visibility="visible"
         android:visibility="gone" />
 </RelativeLayout>
