--- a/SportsSideKick/app/src/main/res/layout-large/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_club_radio.xml
@@ -6,13 +6,13 @@
     android:background="@color/colorPrimaryMediumLight"
     tools:context=".ui.fragment.stream.ClubRadioFragment">
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
         android:id="@+id/progressBar"
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
-        android:elevation="@dimen/elevation_2"
-        app:indicatorName="LineSpinFadeLoaderIndicator" />
+        android:elevation="@dimen/elevation_2" />
 
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/video_player_dummy_container"
