--- a/SportsSideKick/app/src/main/res/layout-large/popup_friend_requests.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_friend_requests.xml
@@ -25,13 +25,13 @@
         android:layout_below="@+id/caption"
         android:background="@android:color/black" />
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
         android:id="@+id/progressBar"
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
-        android:elevation="@dimen/elevation_2"
-        app:indicatorName="LineSpinFadeLoaderIndicator" />
+        android:elevation="@dimen/elevation_2" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/requests_recycler_view"
