--- a/SportsSideKick/app/src/main/res/layout-large/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_signup.xml
@@ -192,14 +192,14 @@
                                 android:textColor="@android:color/black"
                                 android:textSize="@dimen/font_size_18" />
 
-                            <com.wang.avi.AVLoadingIndicatorView
+                            <ProgressBar
+                                style="?android:attr/progressBarStyle"
                                 android:id="@+id/sign_up_progress_bar"
                                 android:layout_width="@dimen/prodgres_bar"
                                 android:layout_height="@dimen/prodgres_bar"
                                 android:layout_centerInParent="true"
                                 android:elevation="@dimen/elevation_2"
-                                android:visibility="gone"
-                                app:indicatorName="LineSpinFadeLoaderIndicator" />
+                                android:visibility="gone" />
 
                         </RelativeLayout>
 
@@ -288,14 +288,14 @@
             android:visibility="visible"/>
 
 
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
+        style="?android:attr/progressBarStyle"
             android:id="@+id/progress_bar_veb_view"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2"
-            android:visibility="visible"
-            app:indicatorName="LineSpinFadeLoaderIndicator"/>
+            android:visibility="visible"/>
 
     </RelativeLayout>
 
