--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -241,14 +241,14 @@
 
                 </LinearLayout>
 
-                <com.wang.avi.AVLoadingIndicatorView
+                <ProgressBar
+                    style="?android:attr/progressBarStyle"
                     android:id="@+id/progressBar"
                     android:layout_width="@dimen/prodgres_bar"
                     android:layout_height="@dimen/prodgres_bar"
                     android:layout_below="@id/login_holder"
                     android:layout_centerInParent="true"
-                    android:elevation="@dimen/elevation_2"
-                    app:indicatorName="LineSpinFadeLoaderIndicator" />
+                    android:elevation="@dimen/elevation_2" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/fragment_wall_recycler_view"
