--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -218,14 +218,14 @@
             android:textColor="@android:color/black"
             android:textSize="@dimen/font_size_18" />
 
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
+        style="?android:attr/progressBarStyle"
             android:id="@+id/login_progress_bar"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2"
-            android:visibility="gone"
-            app:indicatorName="LineSpinFadeLoaderIndicator" />
+            android:visibility="gone" />
 
     </RelativeLayout>
 
@@ -250,14 +250,14 @@
             android:textSize="@dimen/font_size_18"
             android:visibility="visible" />
 
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
+        style="?android:attr/progressBarStyle"
             android:id="@+id/reset_progress_bar"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2"
-            android:visibility="gone"
-            app:indicatorName="LineSpinFadeLoaderIndicator" />
+            android:visibility="gone" />
 
     </RelativeLayout>
 
