--- a/SportsSideKick/app/src/main/res/layout-large/popup_add_friend.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_add_friend.xml
@@ -118,7 +118,8 @@
         android:minHeight="@dimen/height_48"
         android:visibility="gone" />
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
         android:id="@+id/progressBar"
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
@@ -126,6 +127,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/margin_10"
         android:layout_marginBottom="@dimen/margin_10"
-        android:elevation="@dimen/elevation_2"
-        app:indicatorName="LineSpinFadeLoaderIndicator" />
+        android:elevation="@dimen/elevation_2" />
 </RelativeLayout>
