--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -40,6 +40,8 @@
             android:id="@+id/chat_heads_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            tools:layout_height="60dp"
+            tools:padding="16dp"
             android:layout_alignParentTop="true"
             android:background="?chatHeadBackgroundColor"
             android:focusableInTouchMode="true"
@@ -48,6 +50,7 @@
         <TextView
             android:id="@+id/chat_info_line_text"
             android:layout_below="@+id/chat_heads_view"
+            tools:text="SCP: You and your friends"
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_20"
             android:paddingStart="@dimen/margin_60"
@@ -72,19 +75,20 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/message_container"
             android:paddingBottom="32dp"
+            tools:padding="16dp"
             android:clipToPadding="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
         android:id="@+id/progressBar"
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
         android:elevation="@dimen/elevation_2"
-        android:visibility="gone"
-        app:indicatorName="LineSpinFadeLoaderIndicator" />
+        android:visibility="gone" />
 
 
     <!-- Input container -->
