--- a/SportsSideKick/app/src/main/res/layout/fragment_friend.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friend.xml
@@ -498,13 +498,13 @@
             android:layout_alignParentEnd="true"
             android:scaleType="centerInside" />
 
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
+        style="?android:attr/progressBarStyle"
             android:id="@+id/friend_progress_bar"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
-            android:elevation="@dimen/elevation_2"
-            app:indicatorName="LineSpinFadeLoaderIndicator" />
+            android:elevation="@dimen/elevation_2" />
 
     </RelativeLayout>
 
@@ -547,13 +547,13 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:scaleType="centerInside" />
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
+        style="?android:attr/progressBarStyle"
             android:id="@+id/chat_room_progress_bar"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
-            android:elevation="@dimen/elevation_2"
-            app:indicatorName="LineSpinFadeLoaderIndicator" />
+            android:elevation="@dimen/elevation_2" />
 
     </RelativeLayout>
 
