--- a/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
@@ -139,13 +139,13 @@
 
             />
 
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
+        style="?android:attr/progressBarStyle"
             android:id="@+id/progressBar"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
-            android:elevation="@dimen/elevation_2"
-            app:indicatorName="LineSpinFadeLoaderIndicator" />
+            android:elevation="@dimen/elevation_2" />
         <TextView
             android:id="@+id/no_result"
             android:layout_width="wrap_content"
